--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "test1": "node ./build/index.js",
     "lint": "ts-standard",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,11 +34,12 @@
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
+    "es6-module-loader": "^0.17.11",
     "express": "4.18.2",
     "morgan": "1.10.0",
     "pg": "8.9.0",
     "reflect-metadata": "0.1.13",
     "sequelize": "6.28.0",
-    "sequelize-typescript": "2.1.5"
+    "sequelize-typescript": "^2.1.5"
   }
 }
