--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "nodemon": "nodemon index.ts",
     "dev": "ts-node-dev src/index.ts",
     "test1": "node ./build/index.js",
     "lint": "ts-standard",
@@ -15,9 +16,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "4.17.17",
-    "@types/node": "18.13.0",
-    "@types/validator": "13.7.12",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.14.1",
+    "@types/sequelize": "^4.28.14",
+    "@types/validator": "^13.7.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
@@ -26,20 +31,23 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "ts-node-dev": "2.0.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "nodemon": "^2.0.21",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "body-parser": "1.20.1",
-    "cookie-parser": "1.4.6",
-    "cors": "2.8.5",
-    "dotenv": "16.0.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "es6-module-loader": "^0.17.11",
-    "express": "4.18.2",
-    "morgan": "1.10.0",
-    "pg": "8.9.0",
-    "reflect-metadata": "0.1.13",
-    "sequelize": "6.28.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5"
   }
 }
